# Integra

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/blend/: robot.blend  robot1.blend  robot2.blend  robot3.blend
assets/gltf/: robot.glb
assets/toml/parts/: blaster.part.toml  boxchassis.part.toml  floatleg.part.toml  recthead.part.toml
assets/xcf/: blaster0.xcf  blaster1.xcf  blastershot.xcf  boxchassis.xcf  floatleg.xcf  floatleg0.xcf  marker.xcf  recthead.xcf
src/: director.rs  main.rs  utils.rs
src/ai/: aggressive.rs  mod.rs
src/assets/: mod.rs  parts.rs  projectiles.rs
