[package]
name = "integra"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly.git" }
bevy_editor_pls = "0.1.1"
bevy_mod_wanderlust = "0.2.0"

[dependencies.bevy]
version = "0.8" 
default-features = false
features = [
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "vorbis",
  "x11",
]

[profile.dev.package."*"]
opt-level = 3