[package]
name = "integra"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_editor_pls = "0.1.1"
bevy_mod_wanderlust = "0.2.0"
serde = "1.0.144"
toml = "0.5.9"
bevy_rapier3d = { version = "0.16.2", features = ["debug-render"] }
rand = "0.8.5"

[dependencies.bevy]
version = "0.8" 
default-features = false
features = [
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "dynamic",
  "render",
  "png",
  "hdr",
  "vorbis",
  "x11",
]

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }